--- a/Enterprise-culture.html
+++ b/Enterprise-culture.html
@@ -2,15 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>企业文化--海德在线</title>
 <style type="text/css">
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-weight: bold;    font: 12px/1.5 tahoma,arial,"Hiragino Sans GB","宋体",sans-serif;
-}
 </style>
 <link href="css/index.css" rel="stylesheet" type="text/css" />
 <script src="css/jquery.js"></script>
@@ -28,8 +21,8 @@ body {
 <li><a href="index.html">首页</a></li>
 <li><a href="Company.html">公司信息 </a></li>
 <li><a href="products.html">业务体系</a></li>
-<li><a href="Enterprise-culture.html">企业文化</a></li>
-<li><a href="Investors.html">投资人关系</a></li>
+<li><a class="active" href="Enterprise-culture.html">企业文化</a></li>
+<li><a href="Investors.html">投资者关系</a></li>
 <li><a href="Cooperation-talks.html">合作洽谈</a></li>
 
 </ul>
@@ -60,20 +53,19 @@ body {
             
             
 <div class="qiye-right" id="div1">
-<p style=" font-size:24px ;color:#F90">构建汽车全生命周期线上线下贯通的生态产业链</p>
+<div class="article-title">构建汽车全生命周期线上线下贯通的生态产业链</div>
 <p><img src="images/yj.png" width="556" height="253" /></p>
 </div>
 
 <div class="qiye-right" id="div2">
-<p style=" font-size:24px ;color:#F90">让移动科技改变汽车本地生活</p>
+<div class="article-title">让移动科技改变汽车本地生活</div>
 <p>1.深耕本地区域，面对不同用户，运用移动互联网技术提供差异化的产品和服务
-<br/>2.运用移动互联网技术，将我们的产品和服务，源源不断融入到我们的汽车本地生活，为用户带来带来便捷和透明；
-<br/>3.打造开放共赢平台，与合作伙伴共同营造健康的互联网生态环境
+<br/>2.运用移动互联网技术，将我们的产品和服务，源源不断融入到我们的汽车本地生活，为用户带来带来便捷和透明；<br/>3.打造开放共赢平台，与合作伙伴共同营造健康的互联网生态环境
 </p>
 </div>
 
 <div class="qiye-right" id="div3">
-<p><span style=" font-size:24px; color:#F90">海纳百川、德行天下</span>
+<div class="article-title">海纳百川、德行天下</div>
 <p>
 &nbsp &nbsp &nbsp &nbsp ------凡成大事者，必定拥有良好的心态以及远大的格局，要像大海般能容得下千百条江河之水。并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 
@@ -81,16 +73,16 @@ body {
 </div>
 
 <div class="qiye-right" id="div4" style="overflow:auto;height:556px;">
+    <div class="article-title">激情</div>
 <p>
-<strong style="font-size:18px; color:#F90">激情</strong><br/>
 &nbsp &nbsp &nbsp &nbsp 当你进入公司的那一刻起，是否有非常振奋的情绪、可否激发起您的平静心情。
 当你完成一件事情时，是否雀跃兴奋、喜悦自信。
 当你听完我们的梦想以及规划后，是否对前景充满希望与渴求的美好祈盼和动力。
 当你对所有的事物不再有任何兴趣的时候，也就是您离开这个组织的时候。
 激情；它具有魔力与吸引力，吸引着无敉的人去爆发、爆发、爆发、爆发这激情。
-<br/>
-<strong style="font-size:18px; color:#F90"">创新</strong>
-<br/>
+</p>
+ <div class="article-title">创新</div>
+<p>
 &nbsp &nbsp &nbsp &nbsp 我们对创新的定义是：一种永不满足的追求，它的本质是突破，它的目标是创造更大价值。颠覆传统，敢于否定自己，努力尝试新的思维我们极为重视重大的、全新的、有意义的、贴近工作目标的创新；做一个敢想，而且是毫无边际的大胆畅想的人。（有想法的人是最值得尊敬的人）
 <br/>&nbsp &nbsp &nbsp &nbsp 我们都要提醒自己善于发现，敢于怀疑，学会变通，超越经验；
 <br/>&nbsp &nbsp &nbsp &nbsp 我们相信解决问题的方法没有最好，只有更好；
@@ -100,9 +92,9 @@ body {
 <br/>&nbsp &nbsp &nbsp &nbsp 我们不甘于平庸，我们随时愿意接受新的有益的东西；
 <br/>&nbsp &nbsp &nbsp &nbsp 我们注重速度和灵活性；
 <br/>&nbsp &nbsp &nbsp &nbsp 我们拥护变革，嘉奖进步、颂扬成果。
-<br/>
-<strong style="font-size:18px;color:#F90">价值</strong>
-<br/>
+</p>
+<div class="article-title">价值</div>
+<p>
 <strong>自我价值</strong><br/>&nbsp &nbsp &nbsp &nbsp 劳动是一切价值的唯一源泉，而决定事物生存与发展的根本前途的决定性因素不是该事物的投入产出比，而是该事物的价值率，决定人对于事物的根本态度的决定性因素也不是该事物的投入产出比，还是该事物的价值率。由此，衡量自我价值的唯一标准，就是自我价值率，实实在在地增强自己生存与发展的能力，不断追求自身生存与发展的能力，就是不断提升自我价值的过程。
 &nbsp &nbsp &nbsp &nbsp 一个人的自我价值是在成长过程中建立起来的，自我完善的过程。我们希望您在加入海德的那一刻起，就与海德共同成长，共同进步，共同超越！
 <br/>
@@ -114,21 +106,21 @@ body {
 </div>
 
 <div class="qiye-right" id="div5" style="overflow:auto;height:556px;">
-<p><span style="font-size:18px"><strong style=" font-size:18px; color:#F90">分享</strong></span> 
-<br/>&nbsp &nbsp &nbsp &nbsp 分享是海德在线的行为主张，我们的每一位同仁都拥有这一种大智慧。
+    <div class="article-title">分享</div>
+<p>&nbsp &nbsp &nbsp &nbsp 分享是海德在线的行为主张，我们的每一位同仁都拥有这一种大智慧。
 <br/>&nbsp &nbsp &nbsp &nbsp 我们每天都敞开胸怀，分享所有工作伙伴的经验、思想和快乐。
 <br/>&nbsp &nbsp &nbsp &nbsp 我们每天将自己的所思所得主动与每一位伙伴交流，以求协作，共同进步。
 <br/>&nbsp &nbsp &nbsp &nbsp 因为分享能带给我们精神上的充实与快乐，懂得分享的人能收获更多的快乐。
-
-
-<br/><span style="font-size:18px"><strong style=" font-size:18px; color:#F90">包容</strong></span> 
-<br/>&nbsp &nbsp &nbsp &nbsp 包容是一种胸怀，海德在线是一个包容的企业，是一个相互包容的团队，懂得包容在利益、得失面前不会斤斤计较，而是以大局为重。
+</p>
+<div class="article-title">包容</div>
+<p>&nbsp &nbsp &nbsp &nbsp 包容是一种胸怀，海德在线是一个包容的企业，是一个相互包容的团队，懂得包容在利益、得失面前不会斤斤计较，而是以大局为重。
 <br/>&nbsp &nbsp &nbsp &nbsp 包容更是一种智慧，是一种以博大胸怀为基础的智慧，懂得包容的人姿态谦和，有着和谐的人际关系，从而使自己的工作、事业、生活顺风顺水。
 <br/>&nbsp &nbsp &nbsp &nbsp 我们鼓励每一位同仁去试错，我们包容每一位同仁的非原则性错误，我们希望每一位海德在线的在这里得到成长。
+</p>
 
-
-<br/><span style="font-size:18px"><strong style=" font-size:18px; color:#F90">真诚</strong></span>
-<br/>&nbsp &nbsp &nbsp &nbsp 海德在线是一个真诚的企业，
+<div class="article-title">真诚</div>
+<p>
+&nbsp &nbsp &nbsp &nbsp 海德在线是一个真诚的企业，
 <br/>&nbsp &nbsp &nbsp &nbsp 真心实意，坦诚相待，海德在线在发展历程中，始终坚持这一基本点，
 <br/>&nbsp &nbsp &nbsp &nbsp 真诚是我们海德在线最宝贵的财富，我们怀着一颗真诚的心创建公司，用真诚的态度组建我们的团队，用真诚的情怀去开发我们的产品，真诚是我们最大的骄傲，是我们获得外埠投资最重要的筹码之一。
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线的文化DNA---鲨鱼文化
@@ -146,19 +138,20 @@ body {
 </div>
 
 <div class="qiye-right" id="div6">
-<p>把用户体验做到极致，超出用户期望的价值体验 </p>
+    <div class="article-title">把用户体验做到极致，超出用户期望的价值体验</div>
+    <p>海德在线永远把用户放在首位，研发出让用户尖叫的产品，是我们不倦的追求。</p>
 </div>
 
 <div class="qiye-right" id="div7">
 <p><img src="images/yrwb.jpg" width="600"/></p>
-<p style=" font-size:16px; float:left; padding-right:120px">
+<p style="float:left; padding-right:120px">
   <strong>管理工作的基本原则</strong>
   <br/>• &nbsp 基于数据的管理 
 <br/>• &nbsp 基于共同价值观的领导 
 <br/>• &nbsp 以工作节点为管理基础 
 <br/>• &nbsp 以结果为导向 
 </p>
-<p style=" float:left; font-size:16px;">
+<p style=" float:left;">
 <strong>管理的几个点</strong>
 <br/>• &nbsp 每天看达成 
 <br/>• &nbsp 每周看计划                 
@@ -169,13 +162,13 @@ body {
 
 <div class="qiye-right" id="div8">
 <p> <br/>
-  <strong>1）核心职能——资深</strong>化 <br/>高层团队全部具有资深互联网行业知名企业背景（阿里、腾讯、百度、京东、美团、猫屋。。。。）
+  <strong>1）核心职能——资深化</strong> <br/>高层团队全部具有资深互联网行业知名企业背景（阿里、腾讯、百度、京东、美团、猫屋等）
 <br/>
-<strong>2）关键职能——专业</strong>化 <br/>各关键职能全部为各领域的专业技术人才
+<strong>2）关键职能——专业化</strong> <br/>各关键职能全部为各领域的专业技术人才
 <br/>
-<strong>3）基础职能——草根—精英</strong>化 <br/>各基础职能不拘一格，认同公司，即使是菜鸟，也会培养成海德精英
+<strong>3）基础职能——草根—精英化</strong> <br/>各基础职能不拘一格，认同公司，即使是菜鸟，也会培养成海德精英
 <br/>
-<strong>4）年龄结构——年轻</strong>化 <br/>在年龄结构合理化的基础上，建立年轻的，富有激情和活力（互联网思维）的团队
+<strong>4）年龄结构——年轻化</strong> <br/>在年龄结构合理化的基础上，建立年轻的，富有激情和活力（互联网思维）的团队
 <br/>
 <strong>5）思维结构——海德化</strong><br/>
 以海德独有的文化，塑造出开放、活力、激情、创新、追求自我价值实现的海德人</p>
@@ -184,15 +177,13 @@ body {
 <div class="qiye-right" id="div9" style="overflow:auto;height:556px;">
 
 <p><img src="images/tnfb2.jpg"/></p>
-<h1>头脑风暴</h1>
+<p class="pic-title">头脑风暴1</p>
 <p><img src="images/tlfb1.jpg"/></p>
-<h1>头脑风暴</h1>
+<p class="pic-title">头脑风暴2</p>
 <p><img src="images/tlfb3.jpg"/></p>
-<h1>头脑风暴</h1>
+<p class="pic-title">头脑风暴3</p>
 <p><img src="images/tlfb4.jpg"/></p>
-<h1>庆祝同事生日</h1>
-<br/>
-<br/>
+<p class="pic-title">庆祝同事生日</p>
 </div>
 
 <div class="qiye-right" id="div10" style=" line-height:60px;">
@@ -242,7 +233,7 @@ body {
 </div>
 <div class="bottom">
 <ul>
-<h2>投资人关系</h2>
+<h2>投资者关系</h2>
 <li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
 <li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
 <li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
