--- a/Investors.html
+++ b/Investors.html
@@ -2,15 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>投资者关系--海德在线</title>
 <style type="text/css">
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-weight: bold;    font: 12px/1.5 tahoma,arial,"Hiragino Sans GB","宋体",sans-serif;
-}
 </style>
 <link href="css/index.css" rel="stylesheet" type="text/css" />
 <script src="css/jquery.js"></script>
@@ -29,7 +22,7 @@ body {
 <li><a href="Company.html">公司信息 </a></li>
 <li><a href="products.html">业务体系</a></li>
 <li><a href="Enterprise-culture.html">企业文化</a></li>
-<li><a href="Investors.html">投资人关系</a></li>
+<li><a class="active" href="Investors.html">投资者关系</a></li>
 <li><a href="Cooperation-talks.html">合作洽谈</a></li>
 
 </ul>
@@ -40,7 +33,7 @@ body {
 <div class="page">
 <div class="contact">
 <div class="qiye-left">
-<div class="qiye-title">投资人关系</div>
+<div class="qiye-title">投资者关系</div>
 <div class="qiye-tiitle-xian"></div>
 <div class="qiye-list">
 <ul id="nav">
@@ -133,7 +126,7 @@ body {
 </div>
 <div class="bottom">
 <ul>
-<h2>投资人关系</h2>
+<h2>投资者关系</h2>
 <li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
 <li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
 <li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
