--- a/index.html
+++ b/index.html
@@ -1,168 +1,133 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-<style type="text/css">
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-weight: bold;    font: 12px/1.5 tahoma,arial,"Hiragino Sans GB","宋体",sans-serif;
-}
-</style>
-<link href="css/index.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-<div class="header">
-<div class="page">
-
-<div class="logo">
-<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:80px;  position:relative;position:absolute;top:105px"><img src="images/hlbq.png" width="513" height="52" /></span>
-</div>
-<div class="menu">
-<ul>
-<li><a href="index.html">首页</a></li>
-<li><a href="Company.html">公司信息 </a></li>
-<li><a href="products.html">业务体系</a></li>
-<li><a href="Enterprise-culture.html">企业文化</a></li>
-<li><a href="Investors.html">投资人关系</a></li>
-<li><a href="Cooperation-talks.html">合作洽谈</a></li>
-
-</ul>
-</div>
-</div>
-</div>
-<div class="center">
-<div class="page">
-<div class="contact">
-
-<div class="banner"><img src="images/ico2.jpg" width="680" height="330" /></div>
-<div class="qiye">
-<h1>企业核心价值</h1>
-<p>
-<strong>激情</strong><br/>
-激情；它具有魔力与吸引力，吸引着无敉的人去爆发、爆发、爆发、爆发这-----激情。</p>
-<p> <br/>
-  <strong>创新</strong><br/>
-  一种永不满足的追求，它的本质是突破，它的目标是创造更大价值。</p>                    
-  <p>
- <br/>
- <strong>价值</strong><br/>
- 自我价值
- <br/>一个人的自我价值是在成长过程中建立起来的，自我完善的过程。
- <br/>社会价值
- <br/>海德在线是一个有共同目标，共同价值观的社会团体，如何衡量个人对于海德在线的价值，取决于每个人对于这个"社会"的贡献度。
-  </p>
-</div>
-<div class="yu1"></div>
-</div>
-<div class="qiyenews">
-<div class="news-title">企业新闻 </div>
-<div class="news_list">
-<ul>
-<li>
-<div class="news_size">
-<div class="news-images"><img src="images/ico3.jpg" width="120" height="120" /></div>
-<div class="news-right">
-<h1><a href="news.html">公司新闻</a></h1>
-<p>2014年9月29日至30日，海德在线在布吉甘坑客家小镇和南山青青世界..
-</p>
-</div>
-</div>
-</li>
-<li>
-<div class="news_size">
-<div class="news-images"><img src="images/ico4.jpg" width="120" height="120" /></div>
-<div class="news-right">
-<h1><a href="news.html">行业资讯</a></h1>
-<p>环顾今年的汽修市场，我们遇到了网上卖汽配，卖完后让用户到线下店去...</p>
-</div>
-</div>
-</li>
-<li style=" margin-right:0px;">
-<div class="news_size">
-<div class="news-images"><img src="images/ico5.jpg" width="120" height="120" /></div>
-<div class="news-right">
-<h1><a href="news.html">企业公布</a></h1>
-<p>2014年11月3日
-深圳市海德在线有限公司过去的半年里在投资人...</p>
-</div>
-</div>
-</li>
-</ul>
-</div>
-</div>
-
-<div class="footer-containe">
-<div class="bottom">
-<ul>
-
-<h2>公司信息</h2>
-<li><a href="Company.html?page=bref" targetDiv="div1">海德简介</a></li>
-<li><a href="Company.html?page=ceotalk" targetDiv="div2">总裁致辞</a></li>
-<li><a href="Company.html?page=road" targetDiv="div3">发展历程</a></li>
-<li><a href="Company.html?page=organization" targetDiv="div4">组织结构</a></li>
-<li><a href="Company.html?page=team" targetDiv="div5">核心团队</a></li>
-</ul>
-</div>
-<div class="bottom">
-<ul>
-<h2>业务体系</h2>
-<li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
-<li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
-<li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
-</ul>
-
-</div>
-<div class="bottom">
-<ul>
-<h2>企业文化</h2>
-<li><a href="Enterprise-culture.html?page=vision" targetDiv="div1">愿景</a></li>
-<li><a href="Enterprise-culture.html?page=mission" targetDiv="div2">使命</a></li>
-<li><a href="Enterprise-culture.html?page=purpose" targetDiv="div3">企业宗旨</a></li>
-<li><a href="Enterprise-culture.html?page=value" targetDiv="div4">核心价值观</a></li>
-<li><a href="Enterprise-culture.html?page=more" targetDiv="div5">更多>></a></li>
-
-</ul>
-</div>
-<div class="bottom">
-<ul>
-<h2>投资人关系</h2>
-<li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
-<li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
-<li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
-<li><a href="Investors.html?page=more" targetDiv="div4">其他动态</a></li>
-
-
-
-
-</ul>
-</div>
-<div class="bottom">
-<ul>
-<h2>合作洽谈</h2>
-<li><a href="Cooperation-talks.html?page=headquarters" targetDiv="div1">海德在线总部</a></li>
-<li><a href="Cooperation-talks.html?page=hr" targetDiv="div2">人力加盟</a></li>
-<li><a href="Cooperation-talks.html?page=operate" targetDiv="div3">运营推广中心</a></li>
-<li><a href="Cooperation-talks.html?page=market" targetDiv="div4">商务拓展中心</a></li>
-<li><a href="Cooperation-talks.html?page=more" targetDiv="div5">更多>></a></li>
-
-</ul>
-
-
-
-</div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
-</div>
-
-</div>
-
-
-
-</div>
-
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>海德在线 Hadlink</title>
+        <style type="text/css">
+        </style>
+        <link href="css/index.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div class="header">
+            <div class="page">
+                <div class="logo">
+                    <span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:80px;  position:relative;position:absolute;top:105px"><img src="images/hlbq.png" width="513" height="52" /></span>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a class="active" href="index.html">首页</a></li>
+                        <li><a href="Company.html">公司信息</a></li>
+                        <li><a href="products.html">业务体系</a></li>
+                        <li><a href="Enterprise-culture.html">企业文化</a></li>
+                        <li><a href="Investors.html">投资者关系</a></li>
+                        <li><a href="Cooperation-talks.html">合作洽谈</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="center">
+            <div class="page body">
+                <div class="contact">
+                    <div class="banner"><img src="images/ico2.jpg" width="680" height="330" /></div>
+                    <div class="index-right">
+                        <h2>企业核心价值</h2>
+                        <strong>激情</strong>
+                        <p>激情；它具有魔力与吸引力，吸引着无敉的人去爆发、爆发、爆发、爆发这激情。</p>
+                        <strong>创新</strong>
+                        <p>一种永不满足的追求，它的本质是突破，它的目标是创造更大价值。</p>
+                        <strong>价值</strong>
+                        <p>海德在线是一个有共同目标，共同价值观的社会团体，如何衡量个人对于海德在线的价值，取决于每个人对于这个"社会"的贡献度。</p>
+                    </div>
+                    <div class="yu1"></div>
+                </div>
+                <div class="qiyenews">
+                    <div class="news-title">企业新闻</div>
+                    <div class="news_list">
+                        <ul>
+                            <li>
+                                <div class="news_size">
+                                    <div class="news-images"><img src="images/ico3.jpg" width="120" height="120" /></div>
+                                    <div class="news-right">
+                                        <h2><a href="news.html">公司新闻</a></h2>
+                                        <p>2014年9月29日至30日，海德在线在布吉甘坑客家小镇和南山青青世界..
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="news_size">
+                                    <div class="news-images"><img src="images/ico4.jpg" width="120" height="120" /></div>
+                                    <div class="news-right">
+                                        <h2><a href="news.html">行业资讯</a></h2>
+                                        <p>环顾今年的汽修市场，我们遇到了网上卖汽配，卖完后让用户到线下店去...</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li style=" margin-right:0px;">
+                                <div class="news_size">
+                                    <div class="news-images"><img src="images/ico5.jpg" width="120" height="120" /></div>
+                                    <div class="news-right">
+                                        <h2><a href="news.html">企业公布</a></h2>
+                                        <p>2014年11月3日
+                                        深圳市海德在线有限公司过去的半年里在投资人...</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <div style="clear:both"></div>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-containe">
+                    <div class="bottom">
+                        <ul>
+                            <h2>公司信息</h2>
+                            <li><a href="Company.html?page=bref" targetDiv="div1">海德简介</a></li>
+                            <li><a href="Company.html?page=ceotalk" targetDiv="div2">总裁致辞</a></li>
+                            <li><a href="Company.html?page=road" targetDiv="div3">发展历程</a></li>
+                            <li><a href="Company.html?page=organization" targetDiv="div4">组织结构</a></li>
+                            <li><a href="Company.html?page=team" targetDiv="div5">核心团队</a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <h2>业务体系</h2>
+                            <li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
+                            <li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
+                            <li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <h2>企业文化</h2>
+                            <li><a href="Enterprise-culture.html?page=vision" targetDiv="div1">愿景</a></li>
+                            <li><a href="Enterprise-culture.html?page=mission" targetDiv="div2">使命</a></li>
+                            <li><a href="Enterprise-culture.html?page=purpose" targetDiv="div3">企业宗旨</a></li>
+                            <li><a href="Enterprise-culture.html?page=value" targetDiv="div4">核心价值观</a></li>
+                            <li><a href="Enterprise-culture.html?page=more" targetDiv="div5">更多>></a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <h2>投资者关系</h2>
+                            <li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
+                            <li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
+                            <li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
+                            <li><a href="Investors.html?page=more" targetDiv="div4">其他动态</a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <h2>合作洽谈</h2>
+                            <li><a href="Cooperation-talks.html?page=headquarters" targetDiv="div1">海德在线总部</a></li>
+                            <li><a href="Cooperation-talks.html?page=hr" targetDiv="div2">人力加盟</a></li>
+                            <li><a href="Cooperation-talks.html?page=operate" targetDiv="div3">运营推广中心</a></li>
+                            <li><a href="Cooperation-talks.html?page=market" targetDiv="div4">商务拓展中心</a></li>
+                            <li><a href="Cooperation-talks.html?page=more" targetDiv="div5">更多>></a></li>
+                        </ul>
+                    </div>
+                    <div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。粤A2-20044005号</div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
