--- a/Company.html
+++ b/Company.html
@@ -2,15 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>公司信息--海德在线</title>
 <style type="text/css">
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-weight: bold;    font: 12px/1.5 tahoma,arial,"Hiragino Sans GB","宋体",sans-serif;
-}
 .active{background:#ffa54a;}
 .qiye-list ul li.active a{color:#FFF;font-weight:bold;}
 
@@ -29,13 +22,11 @@ body {
 <div class="menu">
 <ul>
 <li><a href="index.html">首页</a></li>
-<li><a href="Company.html">公司信息 </a></li>
+<li><a class="active" href="Company.html">公司信息</a></li>
 <li><a href="products.html">业务体系</a></li>
 <li><a href="Enterprise-culture.html">企业文化</a></li>
-<li><a href="Investors.html">投资人关系</a></li>
+<li><a href="Investors.html">投资者关系</a></li>
 <li><a href="Cooperation-talks.html">合作洽谈</a></li>
-
-
 
 </ul>
 </div>
@@ -67,9 +58,9 @@ body {
 <br/>&nbsp &nbsp &nbsp &nbsp 展望未来，我们希望把海德在线做成一家受人尊敬的企业。我们真诚的希望能与所有伙伴分享，能与所有伙伴携手，帮助中国亿万车主获得更加超值的价值体验，帮助更多的汽车服务提供商以及配套产品提供商，获得更加良性与公平的市场竞争环境。
 </div>
 <div class="qiye-right" id="div2" style="overflow:auto;height:556px;">
-<p><span style=" font-size:24px; color:#F90">海纳百川，德行天下</span>
+<div class="article-title">海纳百川，德行天下</div>
 
-<br/>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
+<p>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线的同仁们；
 <br/>&nbsp &nbsp &nbsp &nbsp 在科技日新月异，经济飞速发展的今天，计算机和互联网尤其是移动互联网的高速发展，给我们周围的生活带来了巨大的影响和变化。而这些高速发展和变化、将改变现有的汽车售后市场格局以及汽车本地生活服务产业。我在感受这种发展和变化的同时，为自己有幸领导、参与构建"汽车全生命周期、线上线下贯通的信息消费服务生态"的梦想而激动不已。
     <br/>&nbsp &nbsp &nbsp &nbsp 我和我的团队凭借对中国移动互联网和汽车产业发展的巨大信心，凭借对国内外汽车服务市场的深入了解，并试图先期把海德在线旗下品牌"91车助手"、打造成为"中国最具活力的车生活服务平台"。
@@ -86,13 +77,12 @@ body {
 马云说过；梦想还是要有的，万一实现了呢？
 是的，不去尝试一下，如何知道未来能成功？
 我们共同迎来了时代的转折点，恭喜你，你已经已经站在了走向成功的门槛上，驶向自己的未来。
-<h1>
 
 <br/>海德在线有限公司
 <br />董事长兼CEO
 
 <br/>程平</p>
-</h1>
+
 </div>
 
 <div class="qiye-right" id="div3" style="overflow:auto;height:556px;">
@@ -102,7 +92,178 @@ body {
 <p>    海德在线致力于成为活服母!</p>
 </div>
 <div class="qiye-right" id="div5" style="overflow:auto;height:556px;">
-<p class="qiye-ld"><img src="images/ceo.jpg" width="196" height="147" /><br /><span style="padding-left:60px">创始人--CEO程平</span></p>
+    <div class="member-list">
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/ceo.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">程平</span>创始人、CEO</p>
+                                <p>花名<span class="member-nickname">吉利</span></p>
+                                <p>典型的北方男人，真诚，率真</p>
+                                <p>超过10年的国内知名企业工作经验，涉及家电，手机、汽车 三个行业。擅长创新，目标感超强，天生的嗅觉比较敏锐。2014年带领一帮草根兄弟创建海德在线，团队兄弟昵称为带头大哥，目前担任海德在线董事长兼CEO。</p>
+                            </div>
+                        </div>
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/yyzj.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">刘俊</span>运营总监</p>
+                                <p>花名<span class="member-nickname">奥拓</span></p>
+                                <p>1980年 made in china 的江西，性别：个人隐私。至于长相嘛，除了帅点没有啥特点，身高嘛，除了精华点，也没有啥特点。好不容易熬到20来岁出头，混了个本科文凭。从此踏上了江湖，成为了攻城狮，熬了个一年半载，感觉没啥奔头，于是乎俺决定要做高大上的运营，以为从此逼格腾飞，冲上九宵。十几年熬下来，发现俺还是那个1024G纯吊丝。至于兴趣爱好嘛，很多：看书、K歌、打球、疯~~（信息量过大，此处省略1万字…）。 </p>
+                                <p>目前创建海德在线后，俺还是干俺的老本行——负责运营工作。和我们牛B的神队友们（其实有很多酒鬼和吃货）共同熬工作、熬生活。我们为了同一个伟大的梦想，痛并快乐着。我们一定是“不飞则已、一飞冲天，不鸣则已，一鸣惊人”。</p>
+                                <p class="sepcial">2014年随带头大哥创建海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/cpzj.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">郑练</span>产品副总监</p>
+                                <p>花名<span class="member-nickname">科鲁兹</span></p>
+                                <p>湖北武汉人、本科毕业于华中科技大学材料学院，武汉大学工商管理双学士。2010年加盟腾讯QQ空间产品部，负责朋友网产品策划、运营及校园推广项目。历任腾讯朋友网产品经理，QQ空间、手机QQ市场经理等职，2011年深圳世界大学生运动会火炬手。</p>
+                                <p class="sepcial">2014年随带头大哥创建海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/swtz.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">徐昂</span>战略推进负责人 兼任BD线下商务拓展总监</p>
+                                <p>花名<span class="member-nickname">福特</span></p>
+                                <p>作为汽车互联网公司的资深从业者，有过几次的创业成功经验。擅长公司战略梳理、战略执行及系统建设，擅长O2O项目运营管理。</p>
+                                <p class="sepcial">2014年随带头大哥创建海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/jszj.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">钟其灵</span>技术负责人</p>
+                                <p>花名<span class="member-nickname">马丁</span></p>
+                                <p>毕业于华中科技大学，有着非常丰富的程序经验，擅长的技术包括安卓，ios，cocos2dx，flash，python，mongodb等，涵盖了客户端，服务器和数据库。富有创新和钻研精神，大学开始就尝试各种创业活动。也是腾讯优秀的技术大牛。</p>
+                                <p class="sepcial">2014年随带头大哥创建海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/gjjs.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">吴炜恒</span>高级技术大牛</p>
+                                <p>花名<span class="member-nickname">途观</span></p>
+                                <p>平庸就是缺乏想象，缺乏个性，缺乏锐气，缺乏创见，缺乏追求，缺乏理想，缺乏勇气，或许有些知识，但是没有见识，或许有些才能，但是没有才华，或许有个文凭，但是没有水平。平庸就是除了物质需要别无他求，以现实为自己活动的上限，以身边的人为自己的标准，以生活的物质处境为自己的骄傲。平庸就是人云亦云，模仿，攀比，陈腐，乏味，呆板，枯燥，俗气，单调，没有色彩，四平八稳，没有挑战性，一眼看得到底，对特立独行恨之入骨。我是泰迪，我想做一个不平庸的人。</p>
+                                <p class="sepcial">2010年以专业的软件技术开发背景，破格直接加入腾讯集团，负责腾讯技术开发，2014年加入海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/gjjs1.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">陈振</span>高级技术大牛</p>
+                                <p>花名<span class="member-nickname">北极星</span></p>
+                                <p>生产日期：1988年。规格：软件开发。使用年限：不详。产地：湖南岳阳。很多人说做软件的一般属于闷闷的那种类型，好吧，我承认，我不算闷闷的类型，但是我绝对是软件一员。因为我能做到软件工程师的玩命工作，也能做到玩命的娱乐。也许是因为IQ不高，所以只能用努力来弥补，也许是因为EQ不高，所以只能用心去交流。我就是一个简单的我,一个真实的我, 一个平凡的人,可是总有一天我会让你们发现我的不平凡。</p>
+                                <p class="sepcial">2014年加入海德在线，成为核心的创始团队成员之一。</p>
+                            </div>
+                        </div>
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/sxcysj.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">罗焕军</span>首席创意设计师</p>
+                                <p>花名<span class="member-nickname">眼镜蛇</span></p>
+                                <p>来自于爽爽的贵州、出生日期不详、略有艺术细菌。
+                                20岁的ID，承载着30岁的UI。
+                                生活模式是个活泼开朗，爱好广泛的闷骚男。
+                                工作模式是个认真负责，注重细节，有强迫症的完美主义者。
+                                传说，世界上有三种奇特的体质。
+                                一、如何都吃不胖。
+                                二、如何看电脑玩手机都不会瞎。
+                                三、如何吃辣上火都不冒痘。
+                                我就是集以上三种特质于一身的那个人神。哈哈哈！</p>
+                                <p class="sepcial">2014年加入海德在线，成为核心创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/rlzy.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">曹美微</span>人力资源经理</p>
+                                <p>花名<span class="member-nickname">保时捷</span></p>
+
+                                <div class="cmm-left">
+                                    <p>姓名：曹美微</p>
+                                    <p>性格：懒；</p>
+                                    <p>兴趣：玩； </p>
+                                    <p>特长：吃；</p>
+                                    <p>专业技能：睡；</p>
+                                    <p>外语水平：得看中文字幕； </p>
+                                    <p>面貌：难看；</p>
+                                    <p>参与团体：外貌协会；</p>
+                                    <p>常用交通工具：购物车；</p>
+                                    <p>对象：手机。</p>
+                                    <p>以上是生活中的我；</p>
+                                </div>
+                                <div class="cmm-right">
+                                <p>姓名：保时捷</p>
+                                <p>性格：直；</p>
+                                <p>兴趣：人；</p>
+                                <p>特长：研究人；</p>
+                                <p>专业能力：识人；</p>
+                                <p>外语水平：得用有道；</p>
+                                <p>面貌：将就着看；</p>
+                                <p>参与团体：海德在线；</p>
+                                <p>常用交通工具：高跟鞋；</p>
+                                <p>对象：不止一个。</p>
+                                <p>以上是工作中的我；</p>
+                                </div>
+                                <p>2014年加入海德在线 成为核心创始团队成员之一；专职为“团队”服务，全力保障后方粮草供给。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/gjjs.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">邱承志</span>字小倩；综合推广</p>
+                                <p>花名<span class="member-nickname">陆风</span></p>
+                                <p>湖南娄底人，喜好古文，常读旧史，偶有拙作，乐以自娱。性嗜酒，逢饮必醉，平素涉猎广泛，所学驳杂不精，戊子年春抵深，入文案一行，继而投身策划，从此深耕此行，大小案例逾百，迩来六七年矣。
+今任海德在线综合推广一职，当殚精竭虑，尽余所能，领综合推广部诸同僚通达战略，上行下效，聚优势之力；整合意见、广纳良言，察小大之情；集思广益，深入调研，策万全之备，以待将来，毕其功于一役，树海德宇内之盛名。</p>
+<p class="sepcial">2014年加入海德在线，成为核心的创始团队成员之一。</p>
+                            </div>
+                        </div>
+
+                        <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/jszj.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">温元达</span>产品经理</p>
+                                <p>花名<span class="member-nickname">雷诺</span></p>
+                                <p>爱产品，爱运营。 爱自由，不爱束缚； 爱热闹，爱独行，也爱互联网 爱真诚，讨厌虚伪 爱体验热门应用，也爱研究冷门软件 互联网就像大草原 专注产品，点燃星火 我和你们不一样 我的代号是雷诺。</p>
+                                <p class="sepcial">2014年加入海德在线，成为核心的创始团队成员之一。</p>
+                            </div>
+                        </div>
+                        <div class="member-item member-end">
+                            <p class="member-end-title">结束语</p>
+                            <p>海德在线还有其他核心的创始团队成员，正奋斗在各个岗位，</p>
+                            <p>同时也期待更多更优秀的人才加盟我们的团队。</p>
+                        </div>
+                        </div>
+<!-- <p class="qiye-ld"><img src="images/ceo.jpg" width="196" height="147" /><br /><span style="padding-left:60px">创始人--CEO程平</span></p>
 <p class="qiye-ld1"><img src="images/yyzj.jpg" width="196" height="147" /><br /><span style="padding-left:60px">运营总监--刘俊</span></p>
 <p class="qiye-ld1"><img src="images/cpzj.jpg" width="196" height="147" /><br /><span style="padding-left:60px">产品副总监--郑练</span></p>
 <p class="qiye-ld"><img src="images/swtz.jpg" width="196" height="147" /><br /><span style="padding-left:60px">商务拓展总监--徐昂</span></p>
@@ -117,7 +278,7 @@ body {
 <p class="qiye-ld1"><img src="images/zhjl.jpg" width="196" height="147" /><br /><span style="padding-left:40px">综合推广--邱承志，字小倩</span></p>
 <p class="qiye-ld"><img src="images/cpjl.jpg" width="196" height="147" /><br /><span style="padding-left:60px">产品经理--温元达</span></p>
 <h1>
-<p style="padding-top:1300px">海德在线还有其他核心的创始团队成员，正奋斗在各个岗位，同时也期待更多更优秀的人才加盟我们的团队。</p></h1>
+<p style="padding-top:1300px">海德在线还有其他核心的创始团队成员，正奋斗在各个岗位，同时也期待更多更优秀的人才加盟我们的团队。</p></h1> -->
 
 
 </div>
@@ -160,7 +321,7 @@ body {
 </div>
 <div class="bottom">
 <ul>
-<h2>投资人关系</h2>
+<h2>投资者关系</h2>
 <li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
 <li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
 <li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
