--- a/Privacy-protection.html
+++ b/Privacy-protection.html
@@ -2,15 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>隐私保护--海德在线</title>
 <style type="text/css">
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-weight: bold;    font: 12px/1.5 tahoma,arial,"Hiragino Sans GB","宋体",sans-serif;
-}
+
 .active{background:#ffa54a;}
 .qiye-list ul li.active a{color:#FFF;font-weight:bold;}
 
@@ -32,7 +26,7 @@ body {
 <li><a href="Company.html">公司信息 </a></li>
 <li><a href="products.html">业务体系</a></li>
 <li><a href="Enterprise-culture.html">企业文化</a></li>
-<li><a href="Investors.html">投资人关系</a></li>
+<li><a href="Investors.html">投资者关系</a></li>
 <li><a href="Cooperation-talks.html">合作洽谈</a></li>
 
 
@@ -98,7 +92,7 @@ body {
 </div>
 <div class="bottom">
 <ul>
-<h2>投资人关系</h2>
+<h2>投资者关系</h2>
 <li><a href="Investors.html?page=announcement" targetDiv="div1">公司公告</a></li>
 <li><a href="Investors.html?page=report" targetDiv="div2">经营报告</a></li>
 <li><a href="Investors.html?page=managerment" targetDiv="div3">公司治理</a></li>
